--- a/Android_Client/OpenSyncedLists/app/src/main/res/layout/activity_list.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/layout/activity_list.xml
@@ -33,21 +33,24 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Neu" />
+            android:inputType="text"
+            android:imeOptions="actionDone"
+            android:tooltipText="New element name"/>
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/iVNewElementTop"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="4"
+            android:tooltipText="Add new element on top"
             app:srcCompat="@drawable/up_arrow" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/iVNewElementBottom"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="4"
+            android:tooltipText="Add new element on bottom"
             app:srcCompat="@drawable/down_arrow" />
 
     </LinearLayout>
