--- a/Android_Client/OpenSyncedLists/app/src/main/res/layout/list_element.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/layout/list_element.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,13 +43,17 @@
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:minWidth="48dp"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     tools:ignore="TouchTargetSizeCheck" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true">
 
                     <EditText
                         android:id="@+id/eTTitle"
@@ -56,8 +61,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:text="Titel"
+                        android:imeOptions="actionDone"
+                        android:inputType="text"
                         android:textColor="#000000"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"/>
 
                     <TextView
                         android:id="@+id/tVDescription"
