--- a/Android_Client/OpenSyncedLists/app/src/main/res/values/themes.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values/themes.xml
@@ -14,5 +14,6 @@
             ?attr/colorPrimaryVariant
         </item>
         <!-- Customize your theme here. -->
+        <item name="android:textColor">#000000</item>
     </style>
 </resources>
