--- a/Android_Client/OpenSyncedLists/app/src/main/res/layout/activity_about.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/layout/activity_about.xml
@@ -10,10 +10,11 @@
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="80dp"
-        android:layout_marginRight="80dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginEnd="70dp"
         android:text="@string/text_about"
         android:textAlignment="center"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
