--- a/Android_Client/OpenSyncedLists/app/src/main/res/layout/list_element.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/layout/list_element.xml
@@ -3,22 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="5dp"
+        android:background="?android:attr/colorBackground"
         android:orientation="vertical">
-
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="5dp"
-            android:background="@color/grey"
-            android:visibility="visible" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,29 +33,29 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
-                    android:minWidth="48dp"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
+                    android:minWidth="48dp"
                     tools:ignore="TouchTargetSizeCheck" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:orientation="vertical"
                     android:focusable="true"
-                    android:focusableInTouchMode="true">
+                    android:focusableInTouchMode="true"
+                    android:orientation="vertical">
 
                     <EditText
                         android:id="@+id/eTTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
-                        android:text="Titel"
                         android:imeOptions="actionDone"
                         android:inputType="text"
+                        android:text="Titel"
                         android:textColor="#000000"
-                        android:textSize="20sp"/>
+                        android:textSize="20sp" />
 
                     <TextView
                         android:id="@+id/tVDescription"
@@ -148,6 +139,13 @@
             </LinearLayout>
 
         </LinearLayout>
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/grey"
+            android:visibility="visible" />
     </LinearLayout>
 
 </FrameLayout>
