--- a/Android_Client/OpenSyncedLists/app/src/main/res/layout/fragment_element_editor.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/layout/fragment_element_editor.xml
@@ -22,6 +22,7 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:text="@string/edit_element_title"
             android:textSize="26sp" />
 
