--- a/Android_Client/OpenSyncedLists/app/src/main/res/layout/activity_about.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/layout/activity_about.xml
@@ -7,7 +7,7 @@
     tools:context=".activities.AboutActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tVAbout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
