--- a/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_list.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_list.xml
@@ -15,17 +15,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="8"
+            android:weightSum="10"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
+                android:id="@+id/hLayoutMain"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
-                android:orientation="horizontal"
-                android:id="@+id/hLayoutMain">
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal">
 
                 <CheckBox
                     android:id="@+id/checkBox"
@@ -69,8 +70,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="5"
+                android:layout_weight="7"
                 android:orientation="horizontal"
                 android:weightSum="4">
 
@@ -85,10 +85,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_weight="3"
-                        android:paddingLeft="0dp"
-                        android:paddingTop="0dp"
-                        android:paddingRight="0dp"
-                        android:paddingBottom="0dp"
+                        android:padding="2dp"
                         app:srcCompat="@drawable/up_arrow" />
 
                     <ImageView
@@ -97,11 +94,8 @@
                         android:layout_height="40dp"
                         android:layout_marginTop="0dp"
                         android:layout_weight="3"
-                        android:paddingLeft="0dp"
-                        android:paddingTop="0dp"
-                        android:paddingRight="0dp"
-                        android:paddingBottom="0dp"
-                        android:src="@drawable/down_arrow"/>
+                        android:padding="2dp"
+                        android:src="@drawable/down_arrow" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -115,22 +109,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_weight="3"
-                        android:paddingLeft="0dp"
-                        android:paddingTop="0dp"
-                        android:paddingRight="0dp"
-                        android:paddingBottom="0dp"
-                        android:src="@drawable/top_arrow"/>
+                        android:padding="4dp"
+                        android:src="@drawable/top_arrow" />
 
                     <ImageView
                         android:id="@+id/btnJumpBottom"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_weight="3"
-                        android:paddingLeft="0dp"
-                        android:paddingTop="0dp"
-                        android:paddingRight="0dp"
-                        android:paddingBottom="0dp"
-                        android:src="@drawable/bottom_arrow"/>
+                        android:padding="4dp"
+                        android:src="@drawable/bottom_arrow" />
                 </LinearLayout>
             </LinearLayout>
 
