--- a/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_list_invert.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_list_invert.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="8"
+            android:weightSum="10"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -23,7 +23,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="5"
+                android:layout_weight="7"
                 android:orientation="horizontal"
                 android:weightSum="4">
 
@@ -38,10 +38,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_weight="3"
-                        android:paddingLeft="0dp"
-                        android:paddingTop="0dp"
-                        android:paddingRight="0dp"
-                        android:paddingBottom="0dp"
+                        android:padding="2dp"
                         app:srcCompat="@drawable/up_arrow" />
 
                     <ImageView
@@ -50,10 +47,7 @@
                         android:layout_height="40dp"
                         android:layout_marginTop="0dp"
                         android:layout_weight="3"
-                        android:paddingLeft="0dp"
-                        android:paddingTop="0dp"
-                        android:paddingRight="0dp"
-                        android:paddingBottom="0dp"
+                        android:padding="2dp"
                         android:src="@drawable/down_arrow" />
                 </LinearLayout>
 
@@ -68,10 +62,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_weight="3"
-                        android:paddingLeft="0dp"
-                        android:paddingTop="0dp"
-                        android:paddingRight="0dp"
-                        android:paddingBottom="0dp"
+                        android:padding="4dp"
                         android:src="@drawable/top_arrow" />
 
                     <ImageView
@@ -79,10 +70,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_weight="3"
-                        android:paddingLeft="0dp"
-                        android:paddingTop="0dp"
-                        android:paddingRight="0dp"
-                        android:paddingBottom="0dp"
+                        android:padding="4dp"
                         android:src="@drawable/bottom_arrow" />
                 </LinearLayout>
             </LinearLayout>
