--- a/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_lists.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_lists.xml
@@ -4,14 +4,26 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tVName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="15dp"
         android:layout_weight="1"
-        android:text="TextView"
+        android:text="List name"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/tVSize"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="15dp"
+        android:layout_weight="0"
+        android:text="0"
         android:textSize="24sp" />
 </LinearLayout>
