--- a/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_list.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_list.xml
@@ -89,17 +89,18 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <LinearLayout
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:weightSum="4">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/linearLayout2"
-                    android:layout_width="match_parent"
+                    android:id="@+id/layoutJumpButtons"
+                    android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="visible">
 
                     <ImageView
                         android:id="@+id/btnJumpUp"
@@ -124,7 +125,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/linearLayout3"
-                    android:layout_width="match_parent"
+                    android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
                     android:orientation="vertical">
