--- a/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_list_invert.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_list_invert.xml
@@ -38,14 +38,14 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:weightSum="4">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/linearLayout2"
-                    android:layout_width="match_parent"
+                    android:id="@+id/layoutJumpButtons"
+                    android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
                     android:orientation="vertical">
@@ -73,7 +73,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/linearLayout3"
-                    android:layout_width="match_parent"
+                    android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
                     android:orientation="vertical">
