--- a/Android_Client/OpenSyncedLists/app/src/main/res/values-night/themes.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values-night/themes.xml
@@ -19,8 +19,8 @@
     <!-- Base application theme. -->
     <style name="Theme.OpenSyncedLists" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_700</item>
-        <item name="colorPrimaryVariant">@color/purple_900</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_700</item>
