--- a/Android_Client/OpenSyncedLists/app/src/main/res/xml/preferences_list.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/xml/preferences_list.xml
@@ -38,6 +38,12 @@
             android:persistent="false" />
 
         <SwitchPreferenceCompat
+            android:key="jump_buttons"
+            android:title="@string/list_pref_jump_buttons_title"
+            android:summary="@string/list_pref_jump_buttons_summary"
+            android:persistent="false" />
+
+        <SwitchPreferenceCompat
             android:key="invert_element"
             android:title="@string/list_pref_invert_element_title"
             android:summary="@string/list_pref_invert_element_summary"
