--- a/Android_Client/OpenSyncedLists/app/src/main/res/menu/one_list_menu.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/menu/one_list_menu.xml
@@ -16,7 +16,15 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/action_search"
+        android:title="@string/search"
+        android:icon="@android:drawable/ic_menu_search"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView" />
+
     <item android:id="@+id/list_clear"
         android:title="@string/menu_list_clear" />
 
