--- a/Android_Client/OpenSyncedLists/app/src/main/res/menu/one_list_options_overview.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/menu/one_list_options_overview.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2022  Etienne Schmidt (eschmidt@schmidt-ti.eu)
   ~
   ~     This program is free software: you can redistribute it and/or modify
@@ -18,31 +17,21 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:id="@+id/action_search"
-        android:title="@string/search"
-        android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="ifRoom"
-        app:actionViewClass="androidx.appcompat.widget.SearchView" />
-
-    <item android:id="@+id/list_clear"
-        android:title="@string/menu_list_clear" />
-
-    <item android:id="@+id/export_md"
+        android:id="@+id/export_md"
         android:title="@string/menu_export_share_md" />
 
-    <item android:id="@+id/export_link"
+    <item
+        android:id="@+id/export_link"
         android:title="@string/menu_export_share" />
 
-    <item android:id="@+id/export_list_json"
+    <item
+        android:id="@+id/export_list_json"
         android:title="@string/menu_export_list_json" />
 
-    <item android:id="@+id/manual_sync"
-        android:title="@string/menu_manual_sync" />
-
-    <item android:id="@+id/list_settings"
+    <item
+        android:id="@+id/list_settings"
         android:title="@string/menu_list_settings" />
 
-    <item android:id="@+id/settings"
-        android:title="@string/menu_settings" />
 </menu>
