--- a/Android_Client/OpenSyncedLists/app/src/main/res/values/themes.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values/themes.xml
@@ -27,11 +27,23 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">
+        <item name="android:statusBarColor">
             ?attr/colorPrimaryVariant
         </item>
         <!-- Customize your theme here. -->
         <item name="android:textColor">#000000</item>
-
+        <item name="toolbarStyle">@style/MyToolbarStyle</item>
     </style>
+
+    <style name="MyToolbarStyle" parent="Widget.MaterialComponents.Toolbar">
+        <item name="titleTextColor">?attr/colorOnPrimary</item>
+        <item name="subtitleTextColor">?attr/colorOnPrimary</item>
+        <item name="android:theme">@style/ToolbarIconsTheme</item> <!-- sets icon tint -->
+    </style>
+
+    <style name="ToolbarIconsTheme" parent="">
+        <item name="colorControlNormal">?attr/colorOnPrimary</item>
+    </style>
+
+
 </resources>
