fix: increase menu button size
Signed-off-by: Etienne Schmidt <gladion136@googlemail.com>

--- a/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_lists.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_lists.xml
@@ -47,13 +47,13 @@
 
         <ImageButton
             android:id="@+id/imgBtnListMenu"
-            android:layout_width="14dp"
-            android:layout_height="17dp"
+            android:layout_width="17dp"
+            android:layout_height="23dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:adjustViewBounds="false"
             android:background="@null"
-            android:scaleType="centerCrop"
+            android:scaleType="centerInside"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/dot_menu_50" />
