--- a/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_lists_small_height.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_lists_small_height.xml
@@ -47,12 +47,12 @@
 
         <ImageButton
             android:id="@+id/imgBtnListMenu"
-            android:layout_width="14dp"
-            android:layout_height="17dp"
+            android:layout_width="21dp"
+            android:layout_height="32dp"
             android:layout_marginEnd="4dp"
             android:adjustViewBounds="false"
             android:background="@null"
-            android:scaleType="centerCrop"
+            android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
