feat: add play store rating intent
Signed-off-by: Etienne Schmidt <gladion136@googlemail.com>

--- a/Android_Client/OpenSyncedLists/app/src/main/res/menu/about_menu.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/menu/about_menu.xml
@@ -28,4 +28,7 @@
     <item
         android:id="@+id/showSourceCode"
         android:title="@string/menu_show_source"/>
+    <item
+        android:id="@+id/reviewOnPlayStore"
+        android:title="@string/menu_review_on_playstore"/>
 </menu>
