--- a/Android_Client/OpenSyncedLists/app/src/main/res/menu/all_lists_menu.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/menu/all_lists_menu.xml
@@ -28,6 +28,9 @@
         android:title="@string/menu_export"/>
     <item android:id="@+id/settings"
         android:title="@string/menu_settings" />
+    <item
+        android:id="@+id/reviewOnPlayStore"
+        android:title="@string/menu_review_on_playstore"/>
     <item android:id="@+id/about"
         android:title="@string/menu_about" />
 </menu>
