--- a/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_lists.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/layout/element_lists.xml
@@ -19,8 +19,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:layout_margin="8dp"
+    android:layout_height="65dp"
+    android:layout_margin="4dp"
     app:cardCornerRadius="8dp"
     app:layout_constraintHorizontal_weight="1">
 
@@ -32,27 +32,28 @@
         <TextView
             android:id="@+id/tVName"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="14dp"
-            android:layout_marginBottom="4dp"
             android:layout_weight="1"
             android:text="List name"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/chipGrpTags"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/imgBtnListMenu"
-            android:layout_width="17dp"
-            android:layout_height="23dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="4dp"
+            android:layout_width="30dp"
+            android:layout_height="40dp"
             android:adjustViewBounds="false"
             android:background="@null"
+            android:paddingLeft="10dp"
+            android:paddingTop="4dp"
+            android:paddingRight="2dp"
+            android:paddingBottom="8dp"
             android:scaleType="centerInside"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -66,9 +67,31 @@
             android:layout_marginBottom="4dp"
             android:layout_weight="0"
             android:text="0"
-            android:textSize="24sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/chipGrpTags"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="1dp"
+            app:chipSpacingHorizontal="2dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tVSize"
+            app:layout_constraintHeight_max="35dp"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleX="1"
+                android:scaleY="1"
+                android:text="Shopping"
+                android:textSize="8sp" />
+        </com.google.android.material.chip.ChipGroup>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
