--- a/Android_Client/OpenSyncedLists/app/src/main/res/menu/edit_tag_menu.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/menu/edit_tag_menu.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (C) 2022  Etienne Schmidt (eschmidt@schmidt-ti.eu)
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Copyright (C) 2025  Etienne Schmidt (eschmidt@schmidt-ti.eu)
   ~
   ~     This program is free software: you can redistribute it and/or modify
   ~     it under the terms of the GNU General Public License as published by
@@ -16,16 +15,14 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_400">#FF7800EE</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="purple_900">#FF20006b</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="green">#FF07fc0f</color>
-    <color name="grey">#8F5b5b5b</color>
-    <color name="white">#FFFFFFFF</color>
-</resources>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/rename_tag"
+        android:title="@string/menu_rename_tag"/>
+    <item
+        android:id="@+id/change_color"
+        android:title="@string/menu_change_tag_color"/>
+    <item
+        android:id="@+id/remove_tag"
+        android:title="@string/menu_remove_tag"/>
+</menu>
